# projects

./: CMakeLists.txt  MATLAB.md  README.md  _config.yml  about.md  bash.md  bash_commands.md  c_cheatsheet.md  doggo.md  guitar.md  index.md  portfolio.md  roadtrips.md  signals.html  stock_data.csv  verilog.md
Bare-Metal-Raspberry-PI-Pico/: Makefile  assign6.uf2  test.c
Bare-Metal-Raspberry-PI-Pico/baremetal/: assign3_doc.txt
Bare-Metal-Raspberry-PI-Pico/drivers/: gpio_irq.c  gpio_irq.h  i2c0.c  i2c0.h  keypad.c  keypad.h  lcd.c  lcd.h  led.c  led0.c  led0.h  pb0.c  pb0.h  systick.c  systick.h  systick_old.c  uart0.c  uart0.h  watchdog.c  watchdog.h
Bare-Metal-Raspberry-PI-Pico/lib/: uclib.c  uclib.h
Bare-Metal-Raspberry-PI-Pico/src/: assign1.c  assign2.c  assign3.c  assign4.c  assign5.c  assign6.c  final.c  test_keypad.c  test_lcd.c  test_lcd_buffer.c  test_mod10.c  test_printhex.c  test_systick.c
C_Programming/Bit_Manipulation/: lab3  (+5 more)
Data_Structures_Algorithms/: Data Structures Intro.xopp  Data Structures Introduction.docx  README.md  Recursion.xopp
Lecture_Notes/: 02-07-2022-ex1.c  02-07-2022-ex2a.c  02-21-2022-structunionmemory.c  02-25-2022-linkedlist.c  02_02_2022.c  02_03_2022  02_03_2022.c  02_07_2022_2.c  02_09_2022.c  02_18_22.c  02_23_22.c  03_07_22.c  03_21_22.c  03_21_22_2.c
Neural Networks/: HW1_Ven_Ranganathan.py  HW2_Ven_Ranganathan.py
Neural Networks & Deep Learning/: HW2_Ven_Ranganathan.py
pract/: prac.cpp
python/: LaPlace_transform_calc_GUI.py  dinos.txt  dinosaur_name_generator.py  import yfinance as yf.py  stock_price_plotter.py
(+844 files in other folders)
